unpackaged/main/default/objects/cmbls__Payment__c/fields/Amount_Applied_to_Fees_ABS__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied_to_Fees_ABS__c</fullName>
    <formula>ABS(cmbls__Amount_Applied_to_Fees__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Applied to Fees (ABS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>