unpackaged/main/default/objects/cmbls__Payment__c/fields/AR_Lessee_fwd_to_Lender_GL__c.field-meta.xml
<CustomField>
    <fullName>AR_Lessee_fwd_to_Lender_GL__c</fullName>
    <label>A/R - Lessee fwd to Lender GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>