unpackaged/main/default/objects/cmbls__Payment__c/fields/Cash_GL__c.field-meta.xml
<CustomField>
    <fullName>Cash_GL__c</fullName>
    <label>Cash GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>