unpackaged/main/default/objects/cmbls__Payment__c/fields/Cash_GL_Account_Override__c.field-meta.xml
<CustomField>
    <fullName>Cash_GL_Account_Override__c</fullName>
    <label>Cash GL Account # Override</label>
    <length>20</length>
    <type>Text</type>
</CustomField>