unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__ACH_Batch__c.field-meta.xml
<CustomField>
    <fullName>cmbls__ACH_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACH Batch</label>
    <referenceTo>cmbls__ACH_Batch__c</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>