unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>cmbls__ACH_Processor__c</fullName>
    <label>ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo - NF Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFAS2 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - QBF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFSPV1 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFSPV2 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFAS3 Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>