unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Amount_Applied_to_Fees__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Amount_Applied_to_Fees__c</fullName>
    <label>Amount Applied to Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>