unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Effective_Date__c</fullName>
    <inlineHelpText>Effective Date</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>