unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Interest_Payment_Amt__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Interest_Payment_Amt__c</fullName>
    <label>Interest Payment Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>