unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Manual_Allocation__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Manual_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Allocation</label>
    <type>Checkbox</type>
</CustomField>