unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Post_Write_Off_Record__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Post_Write_Off_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Write Off Record</label>
    <type>Checkbox</type>
</CustomField>