unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Posted_to_accounting__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Posted_to_accounting__c</fullName>
    <description>Will populate once the GL transactions have been generated for relevant payment records (that generate GL entry records).</description>
    <inlineHelpText>Will populate once the GL transactions have been generated for relevant payment records (that generate GL entry records).</inlineHelpText>
    <label>Posted to accounting</label>
    <type>Date</type>
</CustomField>