unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Response_Code__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Response_Code__c</fullName>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>