unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Reversal_Of__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Reversal_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reversal Of</label>
    <referenceTo>cmbls__Payment__c</referenceTo>
    <relationshipLabel>Payments (Reversal Of)</relationshipLabel>
    <relationshipName>Reversals</relationshipName>
    <type>Lookup</type>
</CustomField>