unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Running_Balance__c</fullName>
    <label>Running Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>