unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Running_Principal_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Running_Principal_Balance_Number__c</fullName>
    <label>RPB #</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>