unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Sequence__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Sequence__c</fullName>
    <label>#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>