unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Settlement_Date__c</fullName>
    <label>Settlement Date</label>
    <type>DateTime</type>
</CustomField>