unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Status__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Status__c</fullName>
    <inlineHelpText>Scheduled: Created and not submitted
Pending: Submitted to the ACH provider, but not yet settled.
Settled: The ACH payment was pulled successfully from the customer's account
Failed: Returned a failed response from the ACH provider</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cmbls__Transaction_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Pre-Pending</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Fees Applied</fullName>
            </value>
            <value>
                <fullName>Fees Collected</fullName>
            </value>
            <value>
                <fullName>Fees Reversed</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Sent Error</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>