unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cmbls__Transaction_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Renewal Payoff</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>RTR</fullName>
            </value>
            <value>
                <fullName>Net Funding</fullName>
            </value>
            <value>
                <fullName>Fee Balance</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Write Off Fee Balance</fullName>
            </value>
            <value>
                <fullName>Overpayment Refund</fullName>
            </value>
            <value>
                <fullName>Initial Balance</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Reversal</fullName>
            </value>
            <value>
                <fullName>Deferred Interest Write Off</fullName>
            </value>
            <value>
                <fullName>Collection on Write-Off</fullName>
            </value>
            <value>
                <fullName>Renewal Fee Payoff</fullName>
            </value>
            <value>
                <fullName>Interest Charge</fullName>
            </value>
            <value>
                <fullName>Reserve Request</fullName>
            </value>
            <value>
                <fullName>Payment From Reserve</fullName>
            </value>
            <value>
                <fullName>Refund from Reserve</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Consulting Fee</fullName>
            </value>
            <value>
                <fullName>Additional Principal Payment</fullName>
            </value>
            <value>
                <fullName>Starting Draw Reserve Balance</fullName>
            </value>
            <value>
                <fullName>Extension Fee</fullName>
            </value>
            <value>
                <fullName>Maturity Default</fullName>
            </value>
            <value>
                <fullName>Payoff</fullName>
            </value>
            <value>
                <fullName>Origination Fee</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Unwind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>