unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>