unpackaged/main/default/objects/cmbls__Payment__c/fields/cmbls__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Transaction_Type__c</fullName>
    <description>This field indicates wether if it is a Fee or a Payment, and should be displayed in the page detail layout.</description>
    <inlineHelpText>This field indicates wether if it is a Fee or a Payment, and should be displayed in the page detail layout.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Fee Collection</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Draw</fullName>
            </value>
            <value>
                <fullName>Draw Reserve</fullName>
            </value>
            <value>
                <fullName>Deferred Fee</fullName>
            </value>
            <value>
                <fullName>Lender Reimbursement</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Payoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>