unpackaged/main/default/objects/cmbls__Payment__c/fields/FinProdPaymentId__c.field-meta.xml
<CustomField>
    <fullName>FinProdPaymentId__c</fullName>
    <externalId>true</externalId>
    <label>FinProdPaymentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>