unpackaged/main/default/objects/cmbls__Payment__c/fields/Loan_Interest_Income_GL__c.field-meta.xml
<CustomField>
    <fullName>Loan_Interest_Income_GL__c</fullName>
    <label>Loan Interest Income GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>