unpackaged/main/default/objects/cmbls__Payment__c/fields/Loan_Receivable_GL__c.field-meta.xml
<CustomField>
    <fullName>Loan_Receivable_GL__c</fullName>
    <label>Loan Receivable GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>