unpackaged/main/default/objects/cmbls__Payment__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>