unpackaged/main/default/objects/cmbls__Payment__c/fields/Net_Recovery_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Recovery_Payment_Amount__c</fullName>
    <formula>cmbls__Transaction_Amount__c - Amount_to_Collection_Agency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Recovery Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>