unpackaged/main/default/objects/cmbls__Payment__c/fields/Other_Income_GL__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_GL__c</fullName>
    <label>Other Income GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>