unpackaged/main/default/objects/cmbls__Payment__c/fields/Overpayment_GL__c.field-meta.xml
<CustomField>
    <fullName>Overpayment_GL__c</fullName>
    <label>Overpayment GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>