unpackaged/main/default/objects/cmbls__Payment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescheduled From</label>
    <referenceTo>cmbls__Payment__c</referenceTo>
    <relationshipLabel>Payments (Payment)</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>