unpackaged/main/default/objects/cmbls__Payment__c/fields/Recoveries_GL__c.field-meta.xml
<CustomField>
    <fullName>Recoveries_GL__c</fullName>
    <label>Recoveries GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>