unpackaged/main/default/objects/cmbls__Payment__c/fields/Returned_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Returned_Payment_Type__c</fullName>
    <description>Return reason of the original payment (PD-2002)</description>
    <formula>cmbls__Reversal_Of__r.cmbls__Error_Description__c</formula>
    <inlineHelpText>Return reason of the original payment</inlineHelpText>
    <label>Returned Payment Type</label>
    <type>Text</type>
</CustomField>