unpackaged/main/default/objects/cmbls__Payment__c/fields/Settled_Or_Applied__c.field-meta.xml
<CustomField>
    <fullName>Settled_Or_Applied__c</fullName>
    <formula>OR(
            ISPICKVAL(cmbls__Status__c, "Settled"),
			ISPICKVAL(cmbls__Status__c, "Applied")
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settled Or Applied</label>
    <type>Checkbox</type>
</CustomField>