unpackaged/main/default/objects/cmbls__Payment__c/fields/TransactionAmount_formula__c.field-meta.xml
<CustomField>
    <fullName>TransactionAmount_formula__c</fullName>
    <formula>IF(
  RecordType.DeveloperName = "Credit",cmbls__Transaction_Amount__c,
cmbls__Transaction_Amount__c*-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>