unpackaged/main/default/objects/cmbls__Payment__c/fields/Wells_Fargo_Payment_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Wells_Fargo_Payment_ID_Formula__c</fullName>
    <description>Uses 'Record ID' if 'Wells Fargo Payment ID Override' is null</description>
    <formula>IF( ISBLANK( Wells_Fargo_Payment_ID_Override__c), Id , Wells_Fargo_Payment_ID_Override__c )</formula>
    <inlineHelpText>Uses 'Record ID' if 'Wells Fargo Payment ID Override' is null</inlineHelpText>
    <label>Wells Fargo Payment ID Formula</label>
    <type>Text</type>
</CustomField>