unpackaged/main/default/objects/cmbls__Payment__c/fields/WellsFargo_Response__c.field-meta.xml
<CustomField>
    <fullName>WellsFargo_Response__c</fullName>
    <label>WellsFargo Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>