unpackaged/main/default/objects/cmbls__Payment__c/recordTypes/cmbls__Credit.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Credit</fullName>
    <active>true</active>
    <label>Credit</label>
</RecordType>