unpackaged/main/default/objects/cmbls__Payment__c/recordTypes/cmbls__Debit.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Debit</fullName>
    <active>true</active>
    <label>Debit</label>
</RecordType>