unpackaged/main/default/objects/cmbls__Payment__c/validationRules/cmbls__write_off_with_repayment_write_off.validationRule-meta.xml
<ValidationRule>
    <fullName>cmbls__write_off_with_repayment_write_off</fullName>
    <active>false</active>
    <description>Prevents Payment with Sub Type = "Collections on Write-Off" from being created if Repayment Status does not equal Write Off.</description>
    <errorConditionFormula>ISPICKVAL(cmbls__Sub_Type__c, "Collection on Write-Off") &amp;&amp;
            NOT(ISPICKVAL(cmbls__Repayment__r.cmbls__Status__c, "Write Off"))</errorConditionFormula>
    <errorMessage>Sub Type = "Collections on Write-Off" requires Repayment Status being Write Off.</errorMessage>
</ValidationRule>